--- a/playbook.yml
+++ b/playbook.yml
@@ -15,3 +15,19 @@
         pkg:
           - python3
           - virtualenv
+        update_cache: yes
+      become: yes
+    - name: Install dep pip(Django)
+      pip:
+        virtualenv: /home/ubuntu/test/venv
+        name:
+          - django
+          - djangorestframework
+    - name: init project
+      shell: ". /home/ubuntu/test/venv/bin/activate; django-admin startproject setup /home/ubuntu/test/"
+    - name: change host settings
+      lineinfile:
+        path: /home/ubuntu/test/setup/settings.py
+        regexp: "ALLOWED_HOSTS"
+        line: 'ALLOWED_HOSTS = ["*"]'
+        backrefs: yes
